make linter less angry

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,18 @@
+[flake8]
+max-line-length = 99
+
+ignore =
+
+  S311
+
+per-file-ignores =
+  # it is possibble to have prints in scripts
+  brain_games/cli.py: WPS421, WPS305, WPS111, WPS210
+
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
 multi_line_output = 3
 include_trailing_comma = true
 default_section = FIRSTPARTY
 # Should be: 80 - 1
-line_length = 79
+line_length = 99 
