--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,10 @@ ignore =
   S311
 
 per-file-ignores =
-  # it is possibble to have prints in scripts / f strings / short named variable
+  # it is possibble to have prints in scripts / f strings / short named variable / more then 5 variables
   brain_games/cli.py: WPS421, WPS305, WPS111, WPS210
   brain_games/scripts/*: WPS421, WPS305
-  brain_games/games/*: WPS421, WPS305, WPS111
+  brain_games/games/*: WPS421, WPS305, WPS111, WPS210
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
