--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ikievite_brain_games"
-version = "0.5.0"
+version = "0.6.0"
 description = ""
 authors = ["ikievite <ikievite@gmail.com>"]
 packages = [
@@ -18,6 +18,7 @@ wemake-python-styleguide = "^0.14.0"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
