allow concat for brain_games/games/progression.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ per-file-ignores =
   brain_games/cli.py: WPS421, WPS305, WPS111, WPS210
   brain_games/scripts/*: WPS421, WPS305
   brain_games/games/*: WPS421, WPS305, WPS111, WPS210
+  # allow explicit string concat
+  brain_games/games/progression.py: WPS336, WPS421, WPS305, WPS111, WPS210
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
