--- a/setup.cfg
+++ b/setup.cfg
@@ -9,9 +9,7 @@ per-file-ignores =
   # it is possibble to have prints in scripts / f strings / short named variable / more then 5 variables
   brain_games/cli.py: WPS421, WPS305, WPS111, WPS210
   brain_games/scripts/*: WPS421, WPS305
-  brain_games/games/*: WPS421, WPS305, WPS111, WPS210
-  # allow explicit string concat
-  brain_games/games/progression.py: WPS336, WPS421, WPS305, WPS111, WPS210
+  brain_games/games/*: WPS421, WPS305, WPS111, WPS210, WPS336
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
