--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ ignore =
 
 per-file-ignores =
   # it is possibble to have prints in scripts / f strings / short named variable / more then 5 variables
-  brain_games/cli.py: WPS421, WPS305, WPS111, WPS210
+  brain_games/cli.py: WPS421, WPS305, WPS111, WPS210, WPS336
   brain_games/scripts/*: WPS421, WPS305
   brain_games/games/*: WPS421, WPS305, WPS111, WPS210, WPS336
 
